[package]
authors = [
    "Anthony DiMarco <ocramida@gmail.com>",
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Matthew Mayer <matthewkmayer@gmail.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]
build = "build.rs"
description = "AWS SDK for Rust - Core"
documentation = "https://docs.rs/rusoto_core"
keywords = ["AWS", "Amazon"]
license = "MIT"
name = "rusoto_core"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.42.0"
homepage = "https://www.rusoto.org/"
exclude = ["test_resources/*"]
edition = "2018"

[badges]
appveyor = { repository = "matthewkmayer/rusoto", branch = "master" }
azure-devops = { project = "matthewkmayer/Rusoto", pipeline = "rusoto.rusoto", build="1" }

[build-dependencies]
rustc_version = "0.2.1"

[dependencies]
async-trait = "0.1"
bytes = "0.5"
futures = "0.3.1"
http = "0.2"
hyper = "0.13.0"
hyper-rustls = { git = "https://github.com/CryZe/hyper-rustls", branch = "hyper-0.13.0", optional = true }
hyper-tls = { version = "0.4.0", optional = true }
lazy_static = "1.4"
log = "0.4"
percent-encoding = "2.1"
pin-project = "0.4"
base64 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.1"
tokio = "0.2.4"
xml-rs = "0.8"
flate2 = {version = "1.0", optional = true}

[dependencies.rusoto_credential]
path = "../credential"
version = "0.42"

[dependencies.rusoto_signature]
path = "../signature"
version = "0.42"

[dependencies.clippy]
optional = true
version = "0.0"

[dev-dependencies]
env_logger = "0.7"
rand = "0.7"
serde_json = "1.0.1"
serde_test = "1.0.1"
tokio = { version = "0.2.4", features = ["macros"] }

[features]
default = ["native-tls"]
encoding = ["flate2"]
nightly-testing = ["rusoto_credential/nightly-testing"]
native-tls = ["hyper-tls"]
rustls = ["hyper-rustls"]
unstable = []
