[package]
authors = [
    "Anthony DiMarco <ocramida@gmail.com>",
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Matthew Mayer <matthewkmayer@gmail.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]
build = "build.rs"
description = "AWS SDK for Rust - Core"
documentation = "https://docs.rs/rusoto_core"
keywords = ["AWS", "Amazon"]
license = "MIT"
name = "rusoto_core"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.42.0"
homepage = "https://www.rusoto.org/"
exclude = ["test_resources/*"]
edition = "2018"

[badges]
appveyor = { repository = "matthewkmayer/rusoto", branch = "master" }
azure-devops = { project = "matthewkmayer/Rusoto", pipeline = "rusoto.rusoto", build="1" }

[build-dependencies]
rustc_version = "0.2"

[dependencies]
async-trait = "0.1"
bytes = "0.5"
futures = "0.3"
hmac = "0.7"
http = "0.2"
hyper = "0.13"
hyper-rustls = { version = "0.19", optional = true }
hyper-tls = { version = "0.4", optional = true }
lazy_static = "1.4"
log = "0.4"
md5 = "0.7"
percent-encoding = "2.1"
pin-project = "0.4"
base64 = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.8"
tokio = { version = "0.2", features = ["tcp", "time", "rt-core", "fs"] }
xml-rs = "0.8"
flate2 = { version = "1.0", optional = true }

[dependencies.rusoto_credential]
path = "../credential"
version = "0.42"

[dependencies.rusoto_signature]
path = "../signature"
version = "0.42"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
env_logger = "0.7"
rand = "0.7"
serde_json = "1.0.1"
serde_test = "1.0.1"

[features]
default = ["native-tls"]
encoding = ["flate2"]
nightly-testing = ["rusoto_credential/nightly-testing"]
native-tls = ["hyper-tls"]
rustls = ["hyper-rustls"]
unstable = []
