[package]
authors = [
    "Anthony DiMarco <ocramida@gmail.com>",
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Matthew Mayer <matthewkmayer@gmail.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]
build = "build.rs"
description = "AWS SDK for Rust - Core"
documentation = "https://docs.rs/rusoto_core"
keywords = ["AWS", "Amazon"]
license = "MIT"
name = "rusoto_core"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.48.0"
homepage = "https://www.rusoto.org/"
exclude = ["test_resources/*"]
edition = "2018"

[build-dependencies]
rustc_version = "0.4"

[dependencies]
async-trait = "0.1.9"
bytes = "1.0"
crc32fast = "1.2"
futures = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["client", "http1", "http2", "tcp"] }
hyper-rustls = { version = "0.24", optional = true, default-features = false, features = [ "http1", "http2", "tls12", "logging" ] }
hyper-tls = { version = "0.5.0", optional = true }
lazy_static = "1.4"
log = "0.4"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["time", "io-util"] }
xml-rs = "0.8"
flate2 = { version = "1.0", optional = true }

[dependencies.rusoto_credential]
path = "../credential"
version = "0.48.0"

[dependencies.rusoto_signature]
path = "../signature"
version = "0.48.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
env_logger = "0.7"
rand = "0.7"
serde_json = "1.0.1"
serde_test = "1.0.1"

[features]
default = ["native-tls"]
encoding = ["flate2"]
nightly-testing = ["rusoto_credential/nightly-testing"]
native-tls = ["hyper-tls"]
rustls = ["hyper-rustls/native-tokio"]
rustls-webpki = ["hyper-rustls/webpki-tokio"]
unstable = []

[package.metadata.docs.rs]
targets = []
