[package]
authors = [
    "Anthony DiMarco <ocramida@gmail.com>",
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Matthew Mayer <matthewkmayer@gmail.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]
license = "MIT"
description = "AWS credential tooling"
documentation = "https://docs.rs/rusoto_credential"
name = "rusoto_credential"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.41.1"
exclude = ["tests/sample-data/*"]
edition = "2018"

[badges]
appveyor = { repository = "matthewkmayer/rusoto", branch = "master" }
azure-devops = { project = "matthewkmayer/Rusoto", pipeline = "rusoto.rusoto", build="1" }

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
dirs = "1.0.2"
futures = "0.1.16"
hyper = "0.12"
regex = "1.0.0"
serde = "1.0.2"
serde_json = "1.0.2"
serde_derive = "1.0.2"
shlex = "0.1.1"
tokio-process = "0.2.3"
tokio-timer = "0.2.6"
lazy_static = "1.4.0"

[dev-dependencies]
quickcheck = "0.6"
tokio-core = "0.1"
rusoto_core = { path = "../core" }
rusoto_s3 = { path = "../services/s3" }

[dependencies.clippy]
optional = true
version = "0.0"

[features]
nightly-testing = []
unstable = []
