[package]
authors = [
    "Anthony DiMarco <ocramida@gmail.com>",
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Matthew Mayer <matthewkmayer@gmail.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]
license = "MIT"
description = "AWS credential tooling"
documentation = "https://docs.rs/rusoto_credential"
name = "rusoto_credential"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.43.0-beta1"
exclude = ["tests/sample-data/*"]
edition = "2018"

[badges]
appveyor = { repository = "matthewkmayer/rusoto", branch = "master" }
azure-devops = { project = "matthewkmayer/Rusoto", pipeline = "rusoto.rusoto", build="1" }

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "1.0"
futures = "0.3"
hyper = "0.13"
pin-project = "0.4"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "0.1"
tokio = { version = "0.2", features = ["macros", "process"] }
zeroize = "1"

[dev-dependencies]
lazy_static = "1.4"
quickcheck = "0.9"
quickcheck_macros = "0.9"

[features]
nightly-testing = []
unstable = []
