[package]
authors = [
    "Anthony DiMarco <ocramida@gmail.com>",
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Matthew Mayer <matthewkmayer@gmail.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]
license = "MIT"
description = "AWS credential tooling"
documentation = "https://docs.rs/rusoto_credential"
name = "rusoto_credential"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.48.0"
exclude = ["tests/sample-data/*"]
edition = "2018"

[dependencies]
async-trait = "0.1.9"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs-next = "2.0.0"
futures = "0.3"
hyper = { version = "0.14", features = ["client", "http1", "tcp", "stream"] }
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0"
shlex = "1.0"
tokio = { version = "1.0", features = ["process", "sync", "time"] }
zeroize = "1"

[dev-dependencies]
lazy_static = "1.4"
quickcheck = "0.9"
quickcheck_macros = "0.9"
tempfile = "3.1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[features]
nightly-testing = []
unstable = []

[package.metadata.docs.rs]
targets = []
