[package]
authors = [
    "Anthony DiMarco <ocramida@gmail.com>",
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Matthew Mayer <matthewkmayer@gmail.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]
description = "AWS SDK for Rust - Request Signing"
documentation = "https://docs.rs/rusoto_signature"
keywords = ["AWS", "Amazon"]
license = "MIT"
name = "rusoto_signature"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.46.0"
homepage = "https://www.rusoto.org/"
edition = "2018"

[build-dependencies]
rustc_version = "0.2"

[dependencies]
bytes = "1.0"
futures = "0.3"
hmac = "0.10"
http = "0.2"
hyper = { version = "0.14", features = ["stream"] }
log = "0.4.1"
md5 = "0.7"
base64 = "0.13"
hex = "0.4"
serde = "1"
sha2 = "0.9"
time = "0.2.11"
percent-encoding = "2"
pin-project-lite = "0.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[dependencies.rusoto_credential]
version = "0.46.0"
path = "../credential"

[dev-dependencies]
serde_json = "1"
serde_test = "1"
tokio = { version = "1.0", features = ["io-util"] }

[package.metadata.docs.rs]
targets = []
