[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>", "Nikita Pekin <contact@nikitapek.in>"]
description = "AWS SDK for Rust - AWS Certificate Manager Private Certificate Authority @ 2017-08-22"
documentation = "https://rusoto.github.io/rusoto/rusoto_acm_pca/index.html"
keywords = ["AWS", "Amazon", "acm-pca"]
license = "MIT"
name = "rusoto_acm_pca"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.35.0"
homepage = "https://www.rusoto.org/"

[build-dependencies]

[dependencies]
futures = "0.1.16"
serde = "1.0.2"
serde_derive = "1.0.2"
serde_json = "1.0.1"

[dependencies.rusoto_core]
version = "0.35.0"
path = "../../core"
default-features = false
[dev-dependencies.rusoto_mock]
version = "0.28.0"
path = "../../../mock"

[features]
default = ["native-tls"]
native-tls = ["rusoto_core/native-tls"]
rustls = ["rusoto_core/rustls"]
