[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>", "Nikita Pekin <contact@nikitapek.in>"]
description = "AWS SDK for Rust - AWS Cloud9 @ 2017-09-23"
documentation = "https://docs.rs/rusoto_cloud9"
keywords = ["AWS", "Amazon", "cloud9"]
license = "MIT"
name = "rusoto_cloud9"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.41.0"
homepage = "https://www.rusoto.org/"
edition = "2018"
exclude = ["test_resources/*"]

[build-dependencies]

[dependencies]
bytes = "0.4.12"
futures = "0.1.16"
serde = "1.0.2"
serde_derive = "1.0.2"
serde_json = "1.0.1"

[dependencies.rusoto_core]
version = "0.41.0"
path = "../../core"
default-features = false
[dev-dependencies.rusoto_mock]
version = "0.41.0"
path = "../../../mock"

[features]
default = ["native-tls"]
native-tls = ["rusoto_core/native-tls"]
rustls = ["rusoto_core/rustls"]
serialize_structs = []
