[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>", "Nikita Pekin <contact@nikitapek.in>"]
description = "AWS SDK for Rust - AWS CloudFormation @ 2010-05-15"
documentation = "https://rusoto.github.io/rusoto/rusoto_cloudformation/index.html"
keywords = ["AWS", "Amazon", "cloudformation"]
license = "MIT"
name = "rusoto_cloudformation"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.32.0"
homepage = "https://www.rusoto.org/"

[build-dependencies]

[dependencies]
futures = "0.1.16"
hyper = "0.11.0"
tokio-core = "0.1.10"
xml-rs = "0.7"

[dependencies.rusoto_core]
version = "0.32.0"
path = "../../core"
[dev-dependencies.rusoto_mock]
version = "0.26.0"
path = "../../../mock"
