[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>", "Nikita Pekin <contact@nikitapek.in>"]
description = "AWS SDK for Rust - AWS CloudFormation @ 2010-05-15"
documentation = "https://docs.rs/rusoto_cloudformation"
keywords = ["AWS", "Amazon", "cloudformation"]
license = "MIT"
name = "rusoto_cloudformation"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.41.0"
homepage = "https://www.rusoto.org/"
edition = "2018"
exclude = ["test_resources/*"]

[build-dependencies]

[dependencies]
bytes = "0.4.12"
futures = "0.1.16"
serde_urlencoded = "0.6"
xml-rs = "0.8"

[dependencies.rusoto_core]
version = "0.41.0"
path = "../../core"
default-features = false
[dev-dependencies.rusoto_mock]
version = "0.41.0"
path = "../../../mock"
default-features = false

[features]
default = ["native-tls"]
native-tls = ["rusoto_core/native-tls"]
rustls = ["rusoto_core/rustls"]
serialize_structs = []
