[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>", "Nikita Pekin <contact@nikitapek.in>"]
description = "AWS SDK for Rust - Amazon CloudFront @ 2017-03-25"
documentation = "https://rusoto.github.io/rusoto/rusoto_core/index.html"
keywords = ["AWS", "Amazon", "cloudfront"]
license = "MIT"
name = "rusoto_cloudfront"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.27.0"
homepage = "https://www.rusoto.org/"

[build-dependencies]

[dependencies]
hyper = "0.10.0"
xml-rs = "0.6"

[dependencies.rusoto_core]
version = "0.27.0"
path = "../../core"
[dev-dependencies.rusoto_mock]
version = "0.25.0"
path = "../../../mock"
