[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>", "Nikita Pekin <contact@nikitapek.in>"]
description = "AWS SDK for Rust - Amazon CloudFront @ 2017-03-25"
documentation = "https://rusoto.github.io/rusoto/rusoto_cloudfront/index.html"
keywords = ["AWS", "Amazon", "cloudfront"]
license = "MIT"
name = "rusoto_cloudfront"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.35.0"
homepage = "https://www.rusoto.org/"

[build-dependencies]

[dependencies]
futures = "0.1.16"
xml-rs = "0.7"

[dependencies.rusoto_core]
version = "0.35.0"
path = "../../core"
default-features = false
[dev-dependencies.rusoto_mock]
version = "0.28.0"
path = "../../../mock"

[features]
default = ["native-tls"]
native-tls = ["rusoto_core/native-tls"]
rustls = ["rusoto_core/rustls"]
