[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>", "Nikita Pekin <contact@nikitapek.in>"]
description = "AWS SDK for Rust - Amazon CloudFront @ 2018-11-05"
documentation = "https://docs.rs/rusoto_cloudfront"
keywords = ["AWS", "Amazon", "cloudfront"]
license = "MIT"
name = "rusoto_cloudfront"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.40.0"
homepage = "https://www.rusoto.org/"
edition = "2018"
exclude = ["test_resources/*"]

[build-dependencies]

[dependencies]
bytes = "0.4.12"
xml-rs = "0.7"

[dependencies.futures-preview]
version = "0.3.0-alpha.18"
features = ["async-await", "nightly"]

[dependencies.rusoto_core]
version = "0.40.0"
path = "../../core"
default-features = false
[dev-dependencies.rusoto_mock]
version = "0.40.0"
path = "../../../mock"

[features]
default = ["native-tls"]
native-tls = ["rusoto_core/native-tls"]
rustls = ["rusoto_core/rustls"]
