[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>", "Nikita Pekin <contact@nikitapek.in>"]
description = "AWS SDK for Rust - AWS CloudHSM V2 @ 2017-04-28"
documentation = "https://rusoto.github.io/rusoto/rusoto_cloudhsmv2/index.html"
keywords = ["AWS", "Amazon", "cloudhsmv2"]
license = "MIT"
name = "rusoto_cloudhsmv2"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.32.0"
homepage = "https://www.rusoto.org/"

[build-dependencies]

[dependencies]
futures = "0.1.16"
serde = "1.0.2"
serde_derive = "1.0.2"
serde_json = "1.0.1"

[dependencies.rusoto_core]
version = "0.32.0"
path = "../../core"
[dev-dependencies.rusoto_mock]
version = "0.26.0"
path = "../../../mock"
