[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>", "Nikita Pekin <contact@nikitapek.in>"]
description = "AWS SDK for Rust - Amazon CloudWatch @ 2010-08-01"
documentation = "https://rusoto.github.io/rusoto/rusoto_cloudwatch/index.html"
keywords = ["AWS", "Amazon", "cloudwatch"]
license = "MIT"
name = "rusoto_cloudwatch"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.35.0"
homepage = "https://www.rusoto.org/"

[build-dependencies]

[dependencies]
futures = "0.1.16"
serde_urlencoded = "0.5"
xml-rs = "0.7"

[dependencies.rusoto_core]
version = "0.35.0"
path = "../../core"
default-features = false
[dev-dependencies.rusoto_mock]
version = "0.28.0"
path = "../../../mock"

[features]
default = ["native-tls"]
native-tls = ["rusoto_core/native-tls"]
rustls = ["rusoto_core/rustls"]
