[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>", "Nikita Pekin <contact@nikitapek.in>"]
description = "AWS SDK for Rust - AWS CodeStar Notifications @ 2019-10-15"
documentation = "https://docs.rs/rusoto_codestar_notifications"
keywords = ["AWS", "Amazon", "codestar-notificatio"]
license = "MIT"
name = "rusoto_codestar_notifications"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.45.0"
homepage = "https://www.rusoto.org/"
edition = "2018"
exclude = ["test_resources/*"]
[package.metadata.docs.rs]
targets = []

[build-dependencies]

[dependencies]
async-trait = "0.1"
bytes = "1.0"
serde = "1.0.2"
serde_derive = "1.0.2"
serde_json = "1.0"

[dependencies.futures]
version = "0.3"

[dependencies.rusoto_core]
version = "0.45.0"
path = "../../core"
default-features = false

[dev-dependencies]
tokio = "1.0"

[dev-dependencies.rusoto_mock]
version = "0.45.0"
path = "../../../mock"
default-features = false

[features]
default = ["native-tls"]
deserialize_structs = ["bytes/serde"]
native-tls = ["rusoto_core/native-tls"]
rustls = ["rusoto_core/rustls"]
serialize_structs = ["bytes/serde"]
